tests/snapshots/mutations__fmt-rewrites-v3-notes.snap
---
source: tests/mutations.rs
description: qctl fmt
---
# -5 +6
 # yaml-language-server: $schema=./schema/tasks.schema.json
-schema_version: 3
+schema_version: 4
 prefix: DEMO
 active: null
 queue:
   - id: DEMO-001
     title: Teach it to write
     scope: demo
     outcome: The file comes back as it went in.
     blocked_by: []
     acceptance:
       - It holds.
-    notes: |-
-      First paragraph.
-
-      Second paragraph.
+    notes:
+      - |-
+        First paragraph.
+      - |-
+        Second paragraph.
 archive: []
 horizon: []
