tests/snapshots/mutations__fmt-strips-whitespace-nobody-chose.snap
---
source: tests/mutations.rs
description: qctl fmt
---
# -7 +2
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
-prefix: DEMO   
+prefix: DEMO
 active: DEMO-001
 
-
-
 queue:
-
   - id: DEMO-001
-    title: A row under three blank lines and a key   
+    title: A row under three blank lines and a key
     scope: demo
     outcome: Something is true.
     blocked_by: []
     acceptance: [It holds.]
 archive: []
 horizon: []
-
-
