tests/snapshots/mutations__park-without-a-horizon-key.snap
---
source: tests/mutations.rs
description: "qctl park DEMO-001 --kind research --open \"The fact is missing.\""
---
# -5 +5
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: null
-queue:
+queue: []
+archive: []
+horizon:
   - id: DEMO-001
     title: Find the missing fact
     scope: demo
     outcome: The question has an answer.
-    blocked_by: []
-    acceptance:
-      - It holds.
-archive: []
+    kind: research
+    open: The fact is missing.
