tests/snapshots/mutations__promote-a-row.snap
---
source: tests/mutations.rs
description: "qctl promote DEMO-002 --acceptance \"It holds.\" --blocked-by DEMO-001"
---
# -4 +7
 # yaml-language-server: $schema=./schema/tasks.schema.json
 schema_version: 4
 prefix: DEMO
 active: DEMO-001
 
 queue:
   - id: DEMO-001
     title: First
     scope: demo
     outcome: First outcome.
     blocked_by: []
     acceptance:
       - It holds.
-archive: []
-horizon:
+
   # This comment belongs to DEMO-002 and travels with it.
   - id: DEMO-002
     title: Parked
     scope: demo
     outcome: It is ready to start.
-    kind: research
-    open: The fact was missing.
     notes:
       - Keep this.
+    blocked_by:
+      - DEMO-001
+    acceptance:
+      - It holds.
+archive: []
+horizon: []
